# task

./: .ghci  .gitignore  .hindent.yaml  LICENSE  README.md  TASk.cabal  docker.sh
src/main/app/: Main.hs
src/main/lib/: Lib.hs
src/test/: LibSpec.hs
