name:                TASk
version:             0.1.0.0
synopsis:            <tbd>
description:         Please see README.md
homepage:            https://github.com/normenmueller/TASk#readme
license:             BSD3
license-file:        LICENSE
author:              Normen Müller
maintainer:          normen.mueller@gmail.com
copyright:           Copyright: (c) 2018 Normen Müller
category:            Simple
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.22

library
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall
                       -fwarn-incomplete-uni-patterns
                       -fno-warn-unused-binds
                       -fno-warn-unused-do-bind
                       -fno-warn-unused-imports
                       -fno-warn-type-defaults
                       -ferror-spans
  hs-source-dirs:      src/main/lib
  exposed-modules:     Lib
  build-depends:       base >= 4.8 && < 5

executable TASk
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      src/main/app
  main-is:             Main.hs
  build-depends:       base >= 4.8 && < 5
                     , TASk

                     , aeson
                     , bytestring
                     , mtl
                     , transformers
                     , yaml
                     -- , containers
                     -- , directory
                     -- , filepath
                     -- , process
                     -- , optparse-applicative
                     -- , safe
                     -- , text
                     -- , typed-process
                     -- , unordered-containers
                     -- , vector

-- test-suite TASk-test
--   default-language:    Haskell2010
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      src/test
--   main-is:             Spec.hs
--   other-modules:       LibSpec
--   build-depends:       base
--                      , TASk
--                      , hspec
--                      , checkers
--                      , hspec-checkers
--                      , QuickCheck

source-repository head
  type:     git
  location: https://github.com/normenmueller/TASk
